[gd_scene load_steps=40 format=2]

[ext_resource path="res://cenas_universais/mensagem_derrota.tscn" type="PackedScene" id=1]
[ext_resource path="res://cenas_universais/botaoVoltaMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://cenas_universais/mensagem_vitoria.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/base_cartas.png" type="Texture" id=5]
[ext_resource path="res://assets/instrucoes_borda.png" type="Texture" id=6]
[ext_resource path="res://assets/tela_comando.png" type="Texture" id=7]
[ext_resource path="res://assets/botao_lixeira.png" type="Texture" id=8]
[ext_resource path="res://assets/cenario_batalha.png" type="Texture" id=9]
[ext_resource path="res://assets/cangaceiro_boss_dark.png" type="Texture" id=10]
[ext_resource path="res://assets/botao_play.png" type="Texture" id=11]
[ext_resource path="res://assets/espaco_instrucoes.png" type="Texture" id=12]
[ext_resource path="res://assets/plataforma.png" type="Texture" id=13]
[ext_resource path="res://assets/plataforma_pequena.png" type="Texture" id=14]
[ext_resource path="res://niveis/cordel1/bossC/bossC_cartas.gd" type="Script" id=15]
[ext_resource path="res://cenas_universais/jogador.tscn" type="PackedScene" id=16]
[ext_resource path="res://niveis/cordel1/bossC/bossC_instrucoes.gd" type="Script" id=17]
[ext_resource path="res://niveis/cordel1/bossC/boss.gd" type="Script" id=18]
[ext_resource path="res://cenas_universais/Dash/dash.tscn" type="PackedScene" id=19]
[ext_resource path="res://niveis/cordel1/bossC/bossCangaceiro.gd" type="Script" id=20]
[ext_resource path="res://cenas_universais/estagio.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/botao_olho_entrar.png" type="Texture" id=22]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 0, 168, 64, 56 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 0, 224, 64, 56 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 0, 280, 64, 56 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 0, 336, 64, 56 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 0, 392, 64, 56 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 56 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 0, 56, 64, 56 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 10 )
region = Rect2( 0, 112, 64, 56 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "dano",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 32.0
height = 54.0

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 39, 38.25 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 84, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 93, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 69 )

[sub_resource type="DynamicFont" id=21]
size = 24
font_data = ExtResource( 4 )

[node name="bossCangaceiro" type="Node2D"]
script = ExtResource( 20 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 225, 162 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 9 )

[node name="boss" type="StaticBody2D" parent="."]

[node name="boss" type="AnimatedSprite" parent="boss"]
position = Vector2( 298, 116 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 7 )
animation = "idle"
frame = 1
playing = true
script = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss"]
position = Vector2( 318, 121 )
shape = SubResource( 14 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 256, 150 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="s_instrucao1" type="Sprite" parent="fundo"]
position = Vector2( 380, -221 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 12 )

[node name="borda_instrucao1" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, -220 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 6 )

[node name="s_instrucao2" type="Sprite" parent="fundo"]
position = Vector2( 380, -74 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 12 )

[node name="borda_instrucao2" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, -74 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 6 )

[node name="s_instrucao3" type="Sprite" parent="fundo"]
position = Vector2( 380, 72 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 12 )

[node name="borda_instrucao3" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, 72 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 6 )

[node name="dash" parent="." instance=ExtResource( 19 )]

[node name="cartas" type="Node" parent="."]
script = ExtResource( 15 )

[node name="carta1" type="TextureButton" parent="cartas"]
margin_left = 17.0
margin_top = 193.0
margin_right = 49.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta1"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[node name="carta2" type="TextureButton" parent="cartas"]
margin_left = 89.0
margin_top = 193.0
margin_right = 121.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta2"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[node name="carta3" type="TextureButton" parent="cartas"]
margin_left = 160.0
margin_top = 193.0
margin_right = 192.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta3"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[node name="carta4" type="TextureButton" parent="cartas"]
margin_left = 231.0
margin_top = 193.0
margin_right = 263.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta4"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[node name="carta5" type="TextureButton" parent="cartas"]
margin_left = 303.0
margin_top = 193.0
margin_right = 335.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta5"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[node name="instrucoes" type="Node" parent="."]
script = ExtResource( 17 )

[node name="instrucao1" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 9.0
margin_right = 508.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao2" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 82.0
margin_right = 508.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao3" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 155.0
margin_right = 508.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="botoes" type="Node" parent="."]

[node name="botao_pronto" type="TextureButton" parent="botoes"]
margin_left = 384.0
margin_top = 224.0
margin_right = 424.0
margin_bottom = 264.0
rect_scale = Vector2( 1.75, 1.75 )
texture_normal = ExtResource( 11 )

[node name="botao_lixeira" type="TextureButton" parent="botoes"]
margin_left = 451.0
margin_top = 229.0
margin_right = 491.0
margin_bottom = 269.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )

[node name="botaoVoltaMenu" parent="botoes" instance=ExtResource( 2 )]
margin_left = 1.0
margin_top = 1.0
margin_right = 21.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )

[node name="botao_olho" type="TextureButton" parent="botoes"]
margin_left = 346.0
margin_top = 16.0
margin_right = 386.0
margin_bottom = 56.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 22 )

[node name="pisos" type="Node" parent="."]

[node name="piso_esquerda" type="Area2D" parent="pisos"]
position = Vector2( 48, 170 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="pisos/piso_esquerda"]
scale = Vector2( 6, 5 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_esquerda"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 8 )

[node name="piso_centro" type="Area2D" parent="pisos"]
position = Vector2( 103, 170 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="pisos/piso_centro"]
scale = Vector2( 6, 5 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_centro"]
position = Vector2( 3, -69.75 )
shape = SubResource( 8 )

[node name="piso_direita" type="Area2D" parent="pisos"]
position = Vector2( 161, 170 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="pisos/piso_direita"]
scale = Vector2( 6, 5 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_direita"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 8 )

[node name="piso_cima_esquerda" type="Area2D" parent="pisos"]
position = Vector2( 48, 107 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_cima_esquerda"]
scale = Vector2( 6, 5 )
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_cima_esquerda"]
position = Vector2( 0.5, -51.75 )
shape = SubResource( 8 )

[node name="piso_cima_centro" type="Area2D" parent="pisos"]
position = Vector2( 103, 107 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_cima_centro"]
scale = Vector2( 6, 5 )
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_cima_centro"]
position = Vector2( 3, -51.75 )
shape = SubResource( 8 )

[node name="piso_cima_direita" type="Area2D" parent="pisos"]
position = Vector2( 161, 107 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_cima_direita"]
scale = Vector2( 6, 5 )
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_cima_direita"]
position = Vector2( 0.5, -51.75 )
shape = SubResource( 8 )

[node name="mensagens" type="Node" parent="."]

[node name="mensagem_vitoria" parent="mensagens" instance=ExtResource( 3 )]
visible = false
nivelRestart = "res://niveis/cordel1/bossC/bossCangaceiro.tscn"

[node name="mensagem_derrota" parent="mensagens" instance=ExtResource( 1 )]
visible = false
nivelRestart = "res://niveis/cordel1/bossC/bossCangaceiro.tscn"
voltaMenu = "res://menu/menu.tscn"

[node name="colisoes" type="Node" parent="."]

[node name="colisao_cima" type="StaticBody2D" parent="colisoes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisoes/colisao_cima"]
position = Vector2( 108, 4 )
shape = SubResource( 10 )

[node name="colisao_baixo" type="StaticBody2D" parent="colisoes"]
position = Vector2( 24, 272 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisoes/colisao_baixo"]
position = Vector2( 83, 0 )
shape = SubResource( 11 )

[node name="colisao_esquerda" type="StaticBody2D" parent="colisoes"]
position = Vector2( 9, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisoes/colisao_esquerda"]
position = Vector2( 0, 59 )
shape = SubResource( 12 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 8.0
margin_top = 48.0
margin_right = 24.0
margin_bottom = 68.0

[node name="Dash" parent="." instance=ExtResource( 19 )]

[node name="jogador" parent="." instance=ExtResource( 16 )]

[node name="estagio" parent="." instance=ExtResource( 21 )]

[node name="pergunta" type="Label" parent="."]
margin_left = 40.0
margin_top = 23.0
margin_right = 168.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 21 )
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 151 )
current = true

[connection signal="pressed" from="cartas/carta1" to="cartas" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta1" to="instrucoes" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta2" to="cartas" method="_on_carta2_pressed"]
[connection signal="pressed" from="cartas/carta2" to="instrucoes" method="_on_carta2_pressed"]
[connection signal="pressed" from="cartas/carta3" to="cartas" method="_on_carta3_pressed"]
[connection signal="pressed" from="cartas/carta3" to="instrucoes" method="_on_carta3_pressed"]
[connection signal="pressed" from="cartas/carta4" to="cartas" method="_on_carta4_pressed"]
[connection signal="pressed" from="cartas/carta4" to="instrucoes" method="_on_carta4_pressed"]
[connection signal="pressed" from="cartas/carta5" to="cartas" method="_on_carta5_pressed"]
[connection signal="pressed" from="cartas/carta5" to="instrucoes" method="_on_carta5_pressed"]
[connection signal="pressed" from="botoes/botao_pronto" to="." method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_pronto" to="cartas" method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="cartas" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="instrucoes" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="botoes/botao_olho" to="." method="_on_botao_olho_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
